--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,38 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="{{ url_for('static', filename='css/output.css') }}" rel="stylesheet">
-</head>
-<body class="bg-color: via-blue-500">
-    
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>student-web</title>
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rufina:wght@400;700&display=swap" rel="stylesheet">
+    </head>
+    <body class="font-serif">
+        <section id="home" class="bg-blue-800 h-screen">
+            <div class="border-2 rounded-xl rounded-t-none border-t-0 w-4/5 m-auto flex border-indigo-800 bg-white">
+                <div class="lg:hidden px-2 flex w-1/3">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <div class="flex w-1/3 lg:items-center lg:justify-center">
+                    <img class="lg:h-2/3 h-5" src="static\images\web-logo1.png" alt="">
+                </div>
+                <div class="p-6 w-full lg:flex hidden justify-end items-center">
+                    <ul class="flex gap-20 font-bold">
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline" href="#">Home</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline" href="#">Buttons</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline" href="#">Attendence</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline" href="#">Todo</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline" href="#">login</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="flex flex-col m-auto rounded-xl text-center mt-8 w-1/2 bg-white">
+                <div class="bg-gradient-to-r from-purple-600 via-purple-500 to-indigo-800 text-transparent bg-clip-text" ><h1 class="h-full lg:text-6xl text-5xl py-4">{{greeting}}</h1></div>
+                <div class=""><h4 class="lg:text-4xl text-3xl">Username</h4></div>
+            </div>
+        </section>
+    </body>
+    </html>
