--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,81 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>student-web</title>
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <section id="home" class="bg-blue-800 h-screen">
-            <div class="border-2 rounded-xl rounded-t-none border-t-0 w-4/5 m-auto flex border-indigo-800 bg-white">
-                <div class="lg:hidden px-2 flex w-1/3">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-                <div class="flex w-1/3 lg:items-center lg:justify-center">
-                    <img class="lg:h-2/3 h-5" src="static\images\web-logo1.png" alt="">
-                </div> 
-                <div class="p-6 w-full lg:flex hidden justify-end items-center">
-                    <ul class="flex gap-20 font-bold">
-                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl" href="#">Home</a></li>
-                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl" href="#">Buttons</a></li>
-                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl" href="#">Attendence</a></li>
-                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl" href="#">Todo</a></li>
-                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl" href="#">login</a></li>
-                    </ul>
-                </div>
-            </div>
 
-            <div class="flex flex-col m-auto rounded-xl text-center mt-8 w-1/2 bg-white">
-                <div class="bg-gradient-to-r from-purple-600 via-purple-500 to-indigo-800 text-transparent bg-clip-text" ><h1 class="h-full lg:text-6xl text-5xl py-4">{{greeting}}</h1></div>
-                <div class=""><h4 class="lg:text-4xl italic text-gray-600 text-3xl border-b-2 pb-10">@Username</h4></div>
-                <div><h4 class="text-2xl pt-10 pt-1">IT-4C</h4></div>
-                {% if current_lecture %}
-                    <div><p class="text-base text-gray-400 pt-1">current lecture:</p></div>
-                    <div><h1 class="text-6xl pt-1">{{current_lecture}}</h1></div>
-                    <div><h2 class="text-4xl pt-2">{{current_class}}</h2></div>
-                    <div><h3 class="text-xl pt-2 pb-10">{{timing}}</h3></div>
-                {% else %}
-                    <div><p class="text-base text-gray-400 text-xl pt-1">current lecture:</p></div>
-                    <div><h1 class="text-4xl pt-1">No lectures going on Right now 😁</h1></div>
-                    <div><h2 class="text-2xl pt-2">no classes just relax!!</h2></div>
-                    <div><h3 class="text-xl pt-2 pb-10">Enjoy your off time :)</h3></div>
-                {% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>student-web</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="static\style.css">
+</head>
+
+<body>
+    <section id="home" class="bg-blue-800 h-screen">
+        <div class="border-2 rounded-xl rounded-t-none border-t-0 w-4/5 m-auto flex border-indigo-800 bg-white">
+            <div class="lg:hidden px-2 flex w-1/3">
+                <i class="fa-solid fa-bars"></i>
             </div>
-        </section>
-    </body>
-    </html>
+            <div class="flex w-1/3 lg:items-center lg:justify-center">
+                <img class="lg:h-2/3 h-5" src="static\images\web-logo1.png" alt="">
+            </div>
+            <div class="p-6 w-full lg:flex hidden justify-end items-center">
+                <ul class="flex gap-20 font-bold">
+                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#home">Home</a></li>
+                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#buttons">Buttons</a></li>
+                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#">Attendence</a></li>
+                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#">Todo</a></li>
+                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#">login</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="flex flex-col m-auto rounded-xl text-center mt-8 lg:w-1/2 w-10/12 bg-white mt-28">
+            <div class="bg-gradient-to-r from-purple-600 via-purple-500 to-indigo-800 text-transparent bg-clip-text">
+                <h1 class="h-full lg:text-6xl text-5xl py-4">{{greeting}}</h1>
+            </div>
+            <div class="">
+                <h4 class="lg:text-4xl italic text-gray-900 text-3xl border-b-2 pb-10">@Username</h4>
+            </div>
+            <div>
+                <h4 class="text-2xl pt-10 pt-1">IT-4C</h4>
+            </div>
+            {% if current_lecture %}
+            <div>
+                <p class="text-base text-gray-400 pt-1">current lecture:</p>
+            </div>
+            <div>
+                <h1 class="text-6xl pt-1">{{current_lecture}}</h1>
+            </div>
+            <div>
+                <h2 class="text-4xl pt-2">{{current_class}}</h2>
+            </div>
+            <div>
+                <h3 class="text-xl pt-2 pb-10">{{timing}}</h3>
+            </div>
+            {% else %}
+            <div>
+                <p class="text-base text-gray-400 text-xl pt-1">current lecture:</p>
+            </div>
+            <div>
+                <h1 class="text-4xl pt-1">No lectures going on Right now 😁</h1>
+            </div>
+            <div>
+                <h2 class="text-2xl pt-2">no classes just relax!!</h2>
+            </div>
+            <div>
+                <h3 class="text-xl pt-2 pb-10">Enjoy your off time :)</h3>
+            </div>
+            {% endif %}
+        </div>
+    </section>
+    <section id="buttons">
+        buttons!
+    </section>
+</body>
+
+</html>
