--- a/templates/register.html
+++ b/templates/register.html
@@ -1,64 +1,81 @@
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>student-web</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="static\style.css">
-    </head>
-    <body class="">
-        <div class="area">
-            <ul class="circles h-screen">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-        <div class="flex">
-            <div class="w-[30%] m-auto bg-blue-100 rounded flex flex-col mt-20 p-5">
-                <header class="py-2">
-                    <h2 class="text-blue-500 text-3xl text-center font-bold">Register</h2>
-                </header>
-                <form>
-                    <div>
-                        <label class="block mb-2 text-blue-500" for="username">Username</label>
-                        <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                            type="text" name="username" required>
-                    </div>
-                    <div>
-                        <label class="block mb-2 text-blue-500" for="username">Email</label>
-                        <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                            type="email" name="email" required>
-                    </div>
-                    <div>
-                        <label class="block mb-2 text-blue-500" for="password">Password</label>
-                        <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                            type="password" name="password" required>
-                    </div>
-                    <div>
-                        <label class="block mb-2 text-blue-500" for="confirm_password">Confirm Password</label>
-                        <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                            type="password" name="confirm_password" required>
-                    </div>
-                    <div>
-                        <input class="w-full bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded"
-                            type="submit" value="Register">
-                    </div>
-                    <footer>
-                        <a class="text-blue-700 hover:text-pink-700 text-sm float-left" href="/login">already have a account?</a>
-                    </footer>   
-                </form>
-            </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>student-web</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="static/style.css">
+</head>
 
-    </html>
+<body class="">
+    <div class="area h-[128%]">
+        <ul class="circles h-full">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <div class="flex">
+        <div class="w-[30%] m-auto bg-blue-100 rounded flex flex-col mt-20 p-5">
+            <header class="py-2">
+                <h2 class="text-blue-500 text-3xl text-center font-bold">Register</h2>
+            </header>
+            <form method="POST" action="/register">
+                <div>
+                    <label class="block mb-2 text-blue-500" for="username">Username</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="text" name="username" required>
+                </div>
+                <div>
+                    <label class="block mb-2 text-blue-500" for="email">Email</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="email" name="email" required>
+                </div>
+                <div>
+                    <label class="block mb-2 text-blue-500" for="password">Password</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="password" name="password" required>
+                </div>
+                <div>
+                    <label class="block mb-2 text-blue-500" for="confirm_password">Confirm Password</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="password" name="confirm_password" required>
+                </div>
+                <div>
+                    <label class="block mb-2 text-blue-500" for="f_name">First Name</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="text" name="f_name" required>
+                </div>
+                <div>
+                    <label class="block mb-2 text-blue-500" for="l_name">Last Name</label>
+                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
+                        type="text" name="l_name" required>
+                </div>
+                <div>
+                    <input class="w-full bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded"
+                        type="submit" value="Register">
+                </div>
+                <footer>
+                    <a class="text-blue-700 hover:text-pink-700 text-sm float-left" href="/login">Already have an
+                        account?</a>
+                    {% if msg %}
+                    <p>{{ msg }}</p>
+                    {% endif %}
+                </footer>
+            </form>
+        </div>
+    </div>
+</body>
+
+</html>
+
