You can Register now

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-
-
     <div class="area">
         <ul class="circles h-screen">
             <li></li>
@@ -89,9 +87,9 @@
             {% endif %}
         </div>
     </section>
-    <!-- <section id="buttons">
+    <section id="buttons">
         buttons!
-    </section> -->
+    </section>
     <footer id="footer">
         <div class="w-full bg-white text-center text-2xl py-3">Made by meet oza</div>
     </footer>
