--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                 <h1 class="h-full lg:text-6xl text-5xl py-4">{{greeting}}</h1>
             </div>
             <div class="">
-                <h4 class="lg:text-4xl italic text-gray-900 text-3xl border-b-2 pb-10">@Username</h4>
+                <h4 class="lg:text-4xl italic text-gray-900 text-3xl border-b-2 pb-10">@{{username}}</h4>
             </div>
             <div>
                 <h4 class="text-2xl pt-10 ">IT-4C</h4>
