bug fixes 16th june

--- a/static/style.css
+++ b/static/style.css
@@ -71,7 +71,7 @@
 	width: 100%;    
     height: 100%;
 	position: absolute;
-	z-index: -1;
+	z-index: -3;
 }
 
 
@@ -185,3 +185,9 @@
 /*
 -- End BackGround Animation 
 */
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
