--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>student-web</title>
+    <title>StudyMate</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="static\style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <div class="area">
         <ul class="circles h-screen">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
             <li></li>
             <li></li>
             <li></li>
@@ -42,8 +51,34 @@
                             href="#">Attendence</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="#">Todo</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                    {% if ausername %}
+                    <button id="dropdownUserAvatarButton" data-dropdown-toggle="dropdownAvatar"
+                        class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                        type="button">
+                        <span class="sr-only">Open user menu</span>
+                        <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg"
+                            alt="user photo">
+                    </button>
+
+                    <!-- Dropdown menu -->
+                    <div id="dropdownAvatar"
+                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                        <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+                            <div>{{ausername}}</div>
+                            <div class="font-medium truncate">{{email}}</div>
+                        </div>
+                        <div class="py-2">
+                            <a href="/profile"class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Profile</a>
+                            <a href="/logout"
+                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log
+                                out</a>
+                        </div>
+                    </div>
+                    {% else %}
+                    <li><a id="account"
+                            class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="/login">login</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -93,7 +128,7 @@
     <footer id="footer">
         <div class="w-full bg-white text-center text-2xl py-3">Made by meet oza</div>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 </body>
 
 </html>
