--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
 
 
 <body class="bg-gray-100">
-    <div class="area h-[150%]">
+    <div class="area h-full">
         <ul class="circles h-full">
             <li></li>
             <li></li>
@@ -31,86 +31,60 @@
             <li></li>
         </ul>
     </div>
-    <div class="flex">
-        <div class="w-[30%] m-auto bg-blue-100 rounded flex flex-col mt-20 p-5 z-10 relative">
-            <header class="py-2">
-                <div class="w-full flex justify-center items-center">
-                    <img src="static\images\test.jpg" class="rounded-[50%] w-[30%]" alt="">
-                </div>
-            </header>
-            <form method="POST" action="/register">
-                <div>
-                    <label class="block mb-2 text-blue-500" for="email">Email</label>
-                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300" type="email" name="email" required>
-                </div>
-                <div>
-                    <label class="block mb-2 text-blue-500" for="f_name">First Name</label>
-                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300" type="text" name="f_name" required>
-                </div>
-                <div>
-                    <label class="block mb-2 text-blue-500" for="l_name">Last Name</label>
-                    <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300" type="text" name="l_name" required>
-                </div>
-                <label class="block text-blue-500 mr-4" for="number">Number</label>
-                <div class="flex items-center mb-6">
-                    <div class="relative">
-                        <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown"
-                            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                            type="button">Dropdown button 
-                            <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
-                            </svg>
-                        </button>
-                        <!-- Dropdown menu -->
-                        <div id="dropdown"
-                            class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 absolute mt-2">
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
-                                <li>
-                                    <option class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</option>
-                                </li>
-                                <li>
-                                    <option class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</option>
-                                </li>
-                                <li>
-                                    <option class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</option>
-                                </li>
-                                <li>
-                                    <option class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign out</option>
-                                </li>
-                            </ul>
-                        </div>
+    <div class="flex justify-center items-center h-screen">
+        <div class="w-[80%] bg-blue-100 rounded p-5">
+            <div class="w-full flex justify-center items-center mb-4 gap-[2%]">
+                <img src="static/images/test.jpg" class="rounded-full h-48 w-48 object-cover" alt="">
+                <i class="fa-solid fa-pen-to-square"></i>
+            </div>
+            <div class="flex gap-20">
+                <div class="w-1/2">
+                    <div>
+                        <label class="block mb-2 text-blue-500" for="email">Email</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
+                            type="text" name="Email" required>
+                        <i class="fa-solid fa-pen-to-square"></i>
                     </div>
-                    
-                    <input class="ml-4 w-[50%] p-2 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300" type="number" name="number" required>
+                    <div>
+                        <label class="block mb-2 text-blue-500" for="username">First Name</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
+                            type="text" name="f_name" required>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div>
+                        <label class="block mb-2 text-blue-500" for="username">Last Name</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
+                            type="text" name="l_name" required>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
                 </div>
-            </form>
+                <div class="w-1/2">
+                    <div>
+                        <label class="block mb-2 text-blue-500" for="username">Current Password</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
+                            type="password" name="current_password" required>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div>
+                        <label class="block mb-2 text-blue-500" for="username">New Password</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
+                            type="password" name="new_password" required>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div>
+                        <label class="block mb-2 text-blue-500" for="username">Confirm New Password</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
+                            type="password" name="c_new_password" required>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center items-center mt-5">
+                <button
+                    class="w-[20%] bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded"
+                    type="submit">Submit Changes</button>
+            </div>  
         </div>
     </div>
-    <div>
-        <div class="w-[30%] m-auto bg-blue-100 rounded flex flex-col mt-20 p-5 z-10 relative">
-            <header class="py-2">
-                <div><img src="{{ img_path }}" alt=""></div>
-            </header>
-            <form method="POST" action="/register">
-                <div>
-                    <label class="block mb-2 text-blue-500" for="username">Email</label>
-                    <input
-                        class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                        type="text" name="username" required>
-                </div>
-                <div>
-                    <label class="block mb-2 text-blue-500" for="email">First Name</label>
-                    <input
-                        class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                        type="email" name="email" required>
-                </div>
-                <div>
-                    <label class="block mb-2 text-blue-500" for="password"></label>
-                    <input
-                        class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
-                        type="password" name="password" required>
-                </div>
-            </form>
-        </div>
-    </div>
+    <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
 </body>
