--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyMate</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="static\style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
-
 
 <body class="bg-gray-100">
     <div class="area h-full">
@@ -41,50 +40,44 @@
                 <div class="w-1/2">
                     <div>
                         <label class="block mb-2 text-blue-500" for="email">Email</label>
-                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
-                            type="text" name="Email" required>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="Email" value="{{ email }}" required>
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                     <div>
-                        <label class="block mb-2 text-blue-500" for="username">First Name</label>
-                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
-                            type="text" name="f_name" required>
+                        <label class="block mb-2 text-blue-500" for="f_name">First Name</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="f_name" value="{{ f_name }}" required>
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                     <div>
-                        <label class="block mb-2 text-blue-500" for="username">Last Name</label>
-                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
-                            type="text" name="l_name" required>
+                        <label class="block mb-2 text-blue-500" for="l_name">Last Name</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="l_name" value="{{ l_name }}" required>
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                 </div>
                 <div class="w-1/2">
                     <div>
-                        <label class="block mb-2 text-blue-500" for="username">Current Password</label>
-                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
-                            type="password" name="current_password" required>
+                        <label class="block mb-2 text-blue-500" for="current_password">Current Password</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="current_password" required>
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                     <div>
-                        <label class="block mb-2 text-blue-500" for="username">New Password</label>
-                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
-                            type="password" name="new_password" required>
+                        <label class="block mb-2 text-blue-500" for="new_password">New Password</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="new_password" required>
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                     <div>
-                        <label class="block mb-2 text-blue-500" for="username">Confirm New Password</label>
-                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]"
-                            type="password" name="c_new_password" required>
+                        <label class="block mb-2 text-blue-500" for="c_new_password">Confirm New Password</label>
+                        <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="c_new_password" required>
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                 </div>
             </div>
             <div class="flex justify-center items-center mt-5">
-                <button
-                    class="w-[20%] bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded"
-                    type="submit">Submit Changes</button>
+                <button class="w-[20%] bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded" type="submit">Submit Changes</button>
             </div>  
         </div>
     </div>
     <script src="https://kit.fontawesome.com/a7ad42ee25.js" crossorigin="anonymous"></script>
 </body>
+
+</html>
