--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body>
+<body class="bg-[#1f27bf]">
     <div class="area h-[150%]">
         <ul class="circles h-full">
             <li></li>
