modal somewhat done

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,31 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <style>
+        .radio-red:checked {
+            background-color: red;
+            border-color: red;
+        }
+
+        .radio-green:checked {
+            background-color: green;
+            border-color: green;
+        }
+
+        .radio-orange:checked {
+            background-color: orange;
+            border-color: orange;
+        }
+
+        input[type="radio"]:hover::before {
+            border: 2px solid #999;
+        }
+
+        .rounded-full {
+            border-radius: 9999px;
+            /* Set a high value for a circular shape */
+        }
+    </style>
 </head>
+
 <body>
-    
-<p data-modal-target="popup-modal" data-modal-toggle="popup-modal" class="block text-blue-500 hover:text-blue-500 ease-in-out">
-    Toggle modal
-</p>
-    
-    <div id="popup-modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+
+    <!-- Modal toggle -->
+    <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
+        class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        type="button">
+        Toggle modal
+    </button>
+
+    <!-- Main modal -->
+    <div id="authentication-modal" tabindex="-1" aria-hidden="true"
+        class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
         <div class="relative p-4 w-full max-w-md max-h-full">
+            <!-- Modal content -->
             <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                <div class="flex">
-                    <div>
-                        <div><input type="radio" name="absent" id="late "><input type="radio" name="late" id="late" value="late"><p>1</p></div>
-                        <div></div>
-                        <div></div>
+                <!-- Modal header -->
+                <div
+                    class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 gap-[2%]">
+                    <div class="flex">
+                        <div class="flex w-50">
+                            <div class="flex gap-2 w-[20%]">
+                                <input id="horizontal-list-radio-license-red" type="radio" value="red" name="list-radio"
+                                    class="appearance-none w-4 h-4 bg-gray-100 border-gray-300 dark:bg-gray-600 dark:border-gray-500 radio-red rounded-full checked:ring-red-500 checked:border-transparent">
+
+                                <label for="horizontal-list-radio-license-red" class="text-white">Absent</label>
+                                <input id="horizontal-list-radio-license-orange" type="radio" value="orange"
+                                    name="list-radio"
+                                    class="appearance-none w-4 h-4 bg-gray-100 border-gray-300 dark:bg-gray-600 dark:border-gray-500 radio-orange rounded-full checked:ring-orange-500 checked:border-transparent">
+                                <label for="horizontal-list-radio-license-orange" class="text-white">Late</label>
+                                <input id="horizontal-list-radio-license-green" type="radio" value="green"
+                                    name="list-radio"
+                                    class="appearance-none w-4 h-4 bg-gray-100 border-gray-300 dark:bg-gray-600 dark:border-gray-500 radio-green rounded-full checked:ring-green-500 checked:border-transparent">
+                                <label for="horizontal-list-radio-license-green" class="text-white">Present</label>
+                                <h4 class="text-white">1<sup>st</sup></h4>
+                            </div>
+                        </div>
                     </div>
-                    <div></div>
+                    <button type="button"
+                        class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                        data-modal-hide="authentication-modal">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
                 </div>
+                <!-- Modal body -->
+
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+
 </body>
+
 </html>
