--- a/templates/index.html
+++ b/templates/index.html
@@ -75,9 +75,9 @@
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="#buttons">Attendance</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="#">Todo</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="#">Stats</a></li>
+                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#">Todo</a></li>
                     {% if ausername %}
                     <button id="dropdownUserAvatarButton" data-dropdown-toggle="dropdownAvatar"
                         class="flex text-sm bg-gray-400 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
@@ -324,11 +324,11 @@
                         </div>
                     </div>
                 </div>
-                <a href="#">
-                    <p class="text-white text-lg hover:text-blue-500 ease-in-out">Apply for leave.</p>
-                </a>
             </div>
         </div>
+    </section>
+    <section id="stats">
+
     </section>
 
     <footer id="footer">
@@ -467,4 +467,5 @@
         });
     </script>
 </body>
+
 </html>
